fix(theme): chapter numbers now visible in light mode, issue #17

--- a/theme-light.scss
+++ b/theme-light.scss
@@ -4,3 +4,8 @@
 
 // Code blocks
 $code-block-bg-alpha: -.8;
+
+// Chapter numbers
+.sidebar-item .chapter-number {
+    color: #fff !important; 
+}
